objects/nFORCE__Route__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>nFORCE__App__c</fullName>
        <description>This field is manually populated. It is required. This field is a unique identifier for the route, and is used, in conjunction with a group&apos;s app, to uniquely identify a requested app.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>App</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>nFORCE__Body_Type__c</fullName>
        <description>The technology which the body content uses.</description>
        <inlineHelpText>The technology which the body content uses.</inlineHelpText>
        <label>Body Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lightning Aura Component</fullName>
                </value>
                <value>
                    <fullName>Lightning Web Component</fullName>
                </value>
                <value>
                    <fullName>Visualforce Page</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nFORCE__Body__c</fullName>
        <description>This field is required. The admin manually populates this field. This field controls what and how data is displayed in the route. If a screen is being used, a layout type must be set. Otherwise, specific values can be set for Visualforce pages in the system.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Body</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Group__c</fullName>
        <description>--DEPRECATED--

            Moved to Group__c.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>-D Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Icon_Class__c</fullName>
        <description>This field is optional. The admin manually populates this field. It controls the icon that displays beside the name of a route on the secondary navigation menu. It is not used for tertiary routes.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Icon Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Is_Hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>--DEPRECATED--

            Moved to Route_Group__c.Is_Hidden__c.</description>
        <label>-D Is Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORCE__Navigation__c</fullName>
        <description>This field is required. The admin manually populates this field or it is automatically set via Install Updates. It is the secondary navigation page name for a route.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Navigation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Order__c</fullName>
        <description>--DEPRECATED--

            Moved to Route_Group__c.Order__c.</description>
        <label>-D Order</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nFORCE__Parameters__c</fullName>
        <description>This field is manually populated. It is optional. A semicolon-separated set of key=value pairs passed as URL parameters to the content of this route.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>A semicolon-separated set of key=value pairs passed as URL parameters to the content of this route.</inlineHelpText>
        <label>Parameters</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nFORCE__Parent_App__c</fullName>
        <description>--DEPRECATED--

            Moved to Route_Group__c.Parent_Route__c.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>-D Parent App</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Screen__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is manually populated. It is optional. This field looks up to the screen, which is typically used to determine what fields to display, and the view state (read only or editable) to display them in.</description>
        <inlineHelpText>The Screen used to render the content of this route.</inlineHelpText>
        <label>Screen</label>
        <referenceTo>nFORCE__Screen__c</referenceTo>
        <relationshipLabel>Routes</relationshipLabel>
        <relationshipName>Routes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nFORCE__Sub_Navigation__c</fullName>
        <description>This field is manually populated. It is optional. This field is used to determine which subnavigation bar to use for a given route.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Sub Navigation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Toolbar__c</fullName>
        <description>--DEPRECATED--</description>
        <encryptionScheme>None</encryptionScheme>
        <label>-D Toolbar</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Topbar__c</fullName>
        <description>This field is manually populated. It is optional. This field is used to determine which topbar to use for a given route.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The page include for the top bar region of the base UI template.</inlineHelpText>
        <label>Topbar</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__lookupKey__c</fullName>
        <description>The field is optional. If populated, the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Route</label>
    <listViews>
        <fullName>nFORCE__All</fullName>
        <columns>nFORCE__Group__c</columns>
        <columns>NAME</columns>
        <columns>nFORCE__App__c</columns>
        <columns>nFORCE__Order__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>nFORCE__Toolbar__c</columns>
        <columns>nFORCE__Body__c</columns>
        <columns>nFORCE__Icon_Class__c</columns>
        <columns>nFORCE__Is_Hidden__c</columns>
        <columns>nFORCE__Parent_App__c</columns>
        <columns>nFORCE__Navigation__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>nFORCE__All1</fullName>
        <columns>NAME</columns>
        <columns>nFORCE__App__c</columns>
        <columns>nFORCE__Body__c</columns>
        <columns>nFORCE__Navigation__c</columns>
        <columns>nFORCE__Screen__c</columns>
        <columns>nFORCE__Sub_Navigation__c</columns>
        <columns>nFORCE__Topbar__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Route Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Routes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>